tests/bad/frontendErrors/fieldOfPrimaryType.latte
int main () {
	int x = 2;
	x.value = 22;
	return 0;
}
